code still need to be improved!